// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubjectLines /> should render the component and show the "Other" toggle 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="title"
    >
      Edit the subject of the contact form
    </div>
    <div
      class="description"
    >
      Here is a default list of subject lines. If there is no subject added, user can freely type any subject.
    </div>
    <div
      class="checkbox"
    >
      <label
        class="label label"
        for="checkbox-4"
      >
        <input
          checked=""
          class="input"
          id="checkbox-4"
          name="checkbox-4"
          type="checkbox"
        />
        Allow custom input using “Other”
      </label>
    </div>
    <div
      class="subjectLinesWrapper"
      style="max-height: 240px;"
    >
      <div
        class="wrapper"
        data-handler-id="T6"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            id="input-text-11"
            name="input-text-11"
            type="text"
            value="Option 1"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
      <div
        class="wrapper"
        data-handler-id="T8"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            id="input-text-12"
            name="input-text-12"
            type="text"
            value="Option 2"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
      <div
        class="wrapper"
        data-handler-id="T10"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            id="input-text-13"
            name="input-text-13"
            type="text"
            value="Option 3"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="wrapper button fill secondary medium"
        type="button"
      >
        <i
          class="material-icons"
        >
          add
        </i>
        <span>
          Add Subject Line
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<SubjectLines /> should render the component with no subject lines and hide the "Other" toggle 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="title"
    >
      Edit the subject of the contact form
    </div>
    <div
      class="description"
    >
      Here is a default list of subject lines. If there is no subject added, user can freely type any subject.
    </div>
    <div
      class="subjectLinesWrapper"
      style="max-height: 240px;"
    />
    <div
      class="footer"
    >
      <button
        class="wrapper button fill secondary medium"
        type="button"
      >
        <i
          class="material-icons"
        >
          add
        </i>
        <span>
          Add Subject Line
        </span>
      </button>
    </div>
  </div>
</div>
`;
